Fixed broken layout & incorrect CSS

--- a/blocks/card-container.css
+++ b/blocks/card-container.css
@@ -12,7 +12,7 @@
 .card__image {
   width: 100%;
   height: 413px;
-  border-radius: 2%;
+  border-radius: 8px;
 }
 
 .card__wrapper {
@@ -27,6 +27,7 @@
   font-size: 20px;
   font-weight: 500;
   line-height: 120%;
+  max-width: 350px;
   padding: 12px 0 4px;
   margin-top: 0;
   margin-bottom: 0;
@@ -36,8 +37,10 @@
 }
 
 .card__like-button {
+  cursor: pointer;
   border: 0;
   background-color: #fcf5e5;
+  opacity: 0.4;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -45,7 +48,7 @@
 }
 
 .card__like-button:hover {
-  color: #000;
+  opacity: 1;
 }
 
 .card__like-icon {
