--- a/blocks/content.css
+++ b/blocks/content.css
@@ -2,5 +2,5 @@
   margin: 0 auto;
   max-width: 1280px;
   background-color: #fcf5e5;
-  padding: 20px;
+  padding: 0 16px;
 }
