--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,11 +1,13 @@
-.footer {
+.footer__copyright {
   display: flex;
   justify-content: center;
+  margin: 0 auto;
   padding: 60px;
   font-family: "Poppins", sans-serif;
   font-style: normal;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 16px;
   line-height: 100%;
   background-color: #fcf5e5;
+  opacity: 0.7;
 }
