--- a/blocks/header.css
+++ b/blocks/header.css
@@ -3,8 +3,8 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  padding-top: 34px;
-  padding-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   background-color: #fff;
 }
 
