--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,4 +1,6 @@
 .page {
+  font-family: "Poppins";
+  color: #212121;
   max-width: 1440px;
   margin: 0 auto;
   background-color: #fcf5e5;
