--- a/media-queries/mobile.css
+++ b/media-queries/mobile.css
@@ -2,7 +2,7 @@
   .profile {
     display: flex;
     flex-direction: column;
-    padding: 0 16px 20px;
+    padding: 20px 16px 20px;
   }
   .profile__avatar {
     width: 80px;
